--- a/artifacts/mesos/mesos_master_install.yml
+++ b/artifacts/mesos/mesos_master_install.yml
@@ -1,3 +1,76 @@
-- tasks:      
+---
+##################################
+##           HANDLERS           ##
+##################################
+- handlers:
+  - name: start docker
+    service: name=docker state=started
+  - name: reload docker
+    service: name=docker state=reloaded
+  - name: restart docker
+    service: name=docker state=restarted
+
+##################################
+##           VARIABLES          ##
+##################################
+  vars:
+    docker_bridge_ip: "172.0.17.1"
+
+##################################
+##            TASKS             ##
+##################################
+  tasks:
   - name: Install Mesos Master
     debug: msg="Install Mesos Master"
+
+  - name: Fail if OS distro is not Ubuntu 14.04
+    fail: msg="The role is designed only for Ubuntu 14.04"
+    when: "{{ ansible_distribution_version | version_compare('14.04', '!=') }}"
+
+  ##############################
+  # INSTALL DOCKER & DOCKER_PY #
+  ##############################
+
+  - name: Install dependencies
+    apt: name={{ item }} update_cache=yes state=present
+    with_items:
+        - python-dev
+        - python-setuptools
+        - python-pip
+
+  - name: Install docker-py
+    pip: name=docker-py state=present version=1.2.3
+
+  - name: Add docker apt repo
+    apt_repository: repo='deb https://apt.dockerproject.org/repo ubuntu-{{ ansible_distribution_release }} main' state=present
+
+  - name: Import the Docker repository key
+    apt_key: url=https://apt.dockerproject.org/gpg state=present id=2C52609D
+
+  - name: Install Docker package
+    apt: name=docker-engine update_cache=yes state=present
+
+  - name: Configure docker0 bridge
+    lineinfile:
+      dest: /etc/default/docker
+      state: present
+      insertafter: ^DOCKER_OPTS=.*
+      line: "DOCKER_OPTS=\"$DOCKER_OPTS --bip={{docker_bridge_ip}}/24 \""
+    notify:
+    - restart docker
+
+  - meta: flush_handlers
+
+  ##############################
+  #       INSTALL CONSUL       #
+  ##############################
+  - name: Install python-consul
+    pip:  name=python-consul  state=present
+
+  ##############################
+  #       INSTALL DNSMASK      #
+  ##############################
+
+  - name: install dnsmasq
+    apt: name="dnsmasq" state=present
+    tags: dnsmasq
