--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -410,3 +410,27 @@ node_types:
           capability: tosca.capabilities.Container
           node: tosca.nodes.indigo.Compute
           relationship: tosca.relationships.HostedOn
+
+  tosca.nodes.indigo.MesosLoadBalancer:
+    derived_from: tosca.nodes.SoftwareComponent
+    properties:
+      master_ips:
+        required: yes
+        type: list
+        entry_schema:
+          type: string
+    interfaces:
+      Standard:
+        create: 
+          implementation: mesos/mesos_lb_install.yml
+        configure: 
+          implementation: mesos/mesos_lb_configure.yml
+          inputs:
+            mesos_master_ips: { get_property: [ SELF, master_ips ] }
+        start:
+          implementation: mesos/mesos_lb_start.yml
+    requirements:
+      - host:
+          capability: tosca.capabilities.Container
+          node: tosca.nodes.indigo.Compute
+          relationship: tosca.relationships.HostedOn
