--- a/artifacts/mesos/mesos_lb_install.yml
+++ b/artifacts/mesos/mesos_lb_install.yml
@@ -70,7 +70,7 @@
   #       INSTALL DNSMASK      #
   ##############################
   - name: install dnsmasq
-    apt: name="dnsmasq" state=present
+    apt: name=dnsmasq state=present
     tags: dnsmasq
 
   ##############################
