--- a/artifacts/mesos/mesos_master_install.yml
+++ b/artifacts/mesos/mesos_master_install.yml
@@ -30,7 +30,6 @@
   ##############################
   # INSTALL DOCKER & DOCKER_PY #
   ##############################
-
   - name: Install dependencies
     apt: name={{ item }} update_cache=yes state=present
     with_items:
@@ -72,5 +71,5 @@
   ##############################
 
   - name: install dnsmasq
-    apt: name="dnsmasq" state=present
+    apt: name=dnsmasq state=present
     tags: dnsmasq
