--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -32,7 +32,7 @@ capability_types:
         type: string
         required: true
         constraints:
-        - valid_values: [ torque, slurm, sge, condor, mesos ]
+        - valid_values: [ local, torque, slurm, sge, condor, mesos ]
 
   tosca.capabilities.indigo.LRMS.Torque:
     derived_from: tosca.capabilities.indigo.LRMS
@@ -43,6 +43,16 @@ capability_types:
         default: torque
         constraints:
           - equal: torque
+          
+  tosca.capabilities.indigo.LRMS.Local:
+    derived_from: tosca.capabilities.indigo.LRMS
+    properties:
+      type:
+        type: string
+        required: true
+        default: local
+        constraints:
+          - equal: local
 
 artifact_types:
 
@@ -169,11 +179,11 @@ node_types:
       zabbix_server:
         type: string
         required: no
-        default: 104.155.32.157
+        default: 90.147.170.165
       zabbix_server_port:
         type: PortDef
         required: no
-        default: 10051
+        default: 32314
       zabbix_server_metadata:
         type: string
         required: no
@@ -215,9 +225,9 @@ node_types:
         default: /home/galaxy/galaxy
         required: false
     requirements:
-      - host:
-          capability: tosca.capabilities.Container
-          node: tosca.nodes.Compute
+      - lrms:
+          capability: tosca.capabilities.indigo.LRMS
+          node: tosca.nodes.indigo.LRMS.FrontEnd
           relationship: tosca.relationships.HostedOn
     interfaces:
       Standard:
@@ -232,6 +242,7 @@ node_types:
             galaxy_install_path: { get_property: [ SELF, install_path ] }
             galaxy_admin: { get_property: [ SELF, admin ] }
             galaxy_admin_api_key: { get_property: [ SELF, admin_api_key ] }
+            galaxy_lrms: { get_property: [ SELF, lrms, type ] }
         start:
           implementation: galaxy/galaxy_start.yml
           inputs:
@@ -343,6 +354,12 @@ node_types:
         create: lrms/torque/torque_fe_install.yml
         configure: lrms/torque/torque_fe_configure.yml
         start: lrms/torque/torque_fe_start.yml
+        
+  tosca.nodes.indigo.LRMS.FrontEnd.Local:
+    derived_from: tosca.nodes.indigo.LRMS.FrontEnd
+    capabilities:
+        lrms:
+          type: tosca.capabilities.indigo.LRMS.Local
 
   tosca.nodes.indigo.Container.Runtime.Docker:
     derived_from: tosca.nodes.SoftwareComponent
